# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

ohos_app_assist_suite("MemoryUitlsLibPurgeablemem_ndk_main") {
  testonly = true
  certificate_profile = "./signature/openharmony_sx.p7b"
  hap_name = "ActsMemoryUitlsLibPurgeablememMainTest"
  subsystem_name = "commonlibrary"
  part_name = "memory_utils"
}

ohos_js_app_suite("ActsMemoryUitlsLibPurgeablememNdkTest") {
  test_hap = true
  testonly = true
  certificate_profile = "./signature/openharmony_sx.p7b"
  hap_name = "ActsMemoryUitlsLibPurgeablememNdkTest"
  subsystem_name = "commonlibrary"
  part_name = "memory_utils"
  deps = [ ":MemoryUitlsLibPurgeablemem_ndk_main" ]
}
