# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

ohos_app_assist_suite("nativebuffer_ndk_main") {
  testonly = true
  certificate_profile =
      "./signature/com_nativebuffer_napitest_openharmony_sx.p7b"
  hap_name = "ActsNativeBufferMainTest"
  part_name = "graphic_2d"
  subsystem_name = "graphic"
}

ohos_js_app_suite("ActsNativeBufferTest") {
  test_hap = true
  testonly = true
  certificate_profile =
      "./signature/com_nativebuffer_napitest_openharmony_sx.p7b"
  hap_name = "ActsNativeBufferTest"
  part_name = "graphic_2d"
  subsystem_name = "graphic"
  deps = [ ":nativebuffer_ndk_main" ]
}
