# the minimum version of CMake.
cmake_minimum_required(VERSION 3.4.1)
project(NativeMultiThreads)

set(NATIVERENDER_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${NATIVERENDER_ROOT_PATH})

aux_source_directory(./ SRC_PATH)

add_library(entry SHARED ${SRC_PATH})
target_link_libraries(entry PUBLIC libace_napi.z.so)